# vibekit

./: .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  create-releases.py  pyproject.toml  spec-driven.md
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: index.md  installation.md  local-development.md  quickstart.md  upgrade.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/vibekit_cli/: __init__.py
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  vibekit.md
templates/project-templates/claude-ps/.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.tasks.md  speckit.taskstoissues.md
templates/project-templates/claude-sh/.claude/commands/: speckit.analyze.md  speckit.plan.md  speckit.taskstoissues.md  speckit.vibekit.md
templates/project-templates/copilot-ps/.github/agents/: speckit.constitution.agent.md  speckit.specify.agent.md  speckit.vibekit.agent.md
templates/project-templates/copilot-sh/.github/agents/: speckit.checklist.agent.md
templates/project-templates/cursor-agent-ps/.cursor/commands/: speckit.implement.md  speckit.plan.md
(+24 files in other folders)
